refactor(all): changing mapper, from modelmapper to mapStruct