@@ -1,46 +1,35 @@
 package com.exalt.bankaccount.adapters.out.db;
 
 import com.exalt.bankaccount.adapters.out.entities.AccountEntity;
-import com.exalt.bankaccount.adapters.out.entities.TransactionEntity;
+import com.exalt.bankaccount.application.converter.MapperTool;
 import com.exalt.bankaccount.application.ports.out.AccountPort;
-import com.exalt.bankaccount.domain.impl.AccountImpl;
 import com.exalt.bankaccount.domain.intf.Account;
 import com.exalt.bankaccount.domain.intf.Transaction;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
-import org.modelmapper.TypeToken;
 import java.util.List;
 import java.util.Optional;
-
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class H2DbAdapter implements AccountPort {
     private final SpringDataJpaRepository repository;
-    private final ModelMapper modelMapper;
+    private final MapperTool mapperTool;
     @Override
     public Optional<Account> findById(Long id) {
-        return repository.findById(id).map(AccountEntity::toDomain);
+        return repository.findById(id).map(mapperTool::accountEntityToAccount);
     }
     @Override
     public Account save(Account account){
-        AccountEntity accountEntity = modelMapper.map(account, AccountEntity.class);
-        List<TransactionEntity> transactionEntities = modelMapper.map(account.getTransactionHistory(), new TypeToken<List<TransactionEntity>>() {}.getType());
-        accountEntity.setTransactions(transactionEntities);
+        AccountEntity accountEntity = mapperTool.accountToAccountEntity(account);
         accountEntity  = repository.save(accountEntity);
-        return new AccountImpl(accountEntity.getId(),
-                accountEntity.getBalance(),
-                accountEntity.getName(),
-                accountEntity.getTransactions().stream()
-                        .map(TransactionEntity::toDomain)
-                        .toList()
-        );
+        return mapperTool.accountEntityToAccount(accountEntity);
     }
 
     @Override
     public List<Transaction> getHistoryById(Long id) {
         return repository.findById(id).map(AccountEntity::getTransactions).stream()
                 .flatMap(List::stream)
-                .map(TransactionEntity::toDomain)
-                .toList();
+                .map(mapperTool::transactionEntityToTransaction)
+                .collect(Collectors.toList());
     }
 }
